# SafeSwipe

./: configuration.yaml  pyproject.toml
safeswipe/data_processing/: data_processing.py
safeswipe/notebooks/: roughbook.ipynb  trial.ipynb
