[tool.poetry]
name = "safeswipe"
version = "0.1.0"
description = "A real time fraud detection system"
authors = ["Chikwado"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
numpy = "^2.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
